[gd_scene load_steps=15 format=2]

[ext_resource path="res://levels/loader/textures/Aseprite.png" type="Texture" id=1]
[ext_resource path="res://levels/loader/textures/BackPBAR.png" type="Texture" id=2]
[ext_resource path="res://levels/loader/textures/BackPBARGray.png" type="Texture" id=3]
[ext_resource path="res://levels/loader/licensed/Godot.png" type="Texture" id=4]
[ext_resource path="res://levels/loader/textures/Back1.png" type="Texture" id=5]
[ext_resource path="res://levels/loader/licensed/Logo.png" type="Texture" id=6]
[ext_resource path="res://levels/loader/licensed/AlphaBanner.png" type="Texture" id=7]
[ext_resource path="res://levels/loader/licensed/GodotGray.png" type="Texture" id=8]
[ext_resource path="res://levels/loader/licensed/LogoGray.png" type="Texture" id=9]
[ext_resource path="res://libraries/ui/LineBar.gd" type="Script" id=10]
[ext_resource path="res://levels/loader/Animations.gd" type="Script" id=11]
[ext_resource path="res://levels/loader/textures/AsepriteGray.png" type="Texture" id=12]
[ext_resource path="res://levels/loader/textures/Back1Alpha.png" type="Texture" id=13]
[ext_resource path="res://levels/loader/licensed/AlphaBanner1.png" type="Texture" id=14]

[node name="Backloader" type="Node2D"]
script = ExtResource( 11 )

[node name="Back1" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Back1Alpha" type="Sprite" parent="."]
visible = false
texture = ExtResource( 13 )

[node name="AlphaBanner1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 14 )

[node name="AlphaBanner" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )

[node name="Normal" type="Node2D" parent="."]

[node name="Aseprite" type="Sprite" parent="Normal"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -500, -50 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="BackPbar" type="Sprite" parent="Normal"]
visible = false
texture = ExtResource( 2 )

[node name="Godot" type="Sprite" parent="Normal"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 500, -50 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Logo" type="Sprite" parent="Normal"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -150 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="Gray" type="Node2D" parent="."]
visible = false

[node name="AsepriteGray" type="Sprite" parent="Gray"]
texture = ExtResource( 12 )

[node name="BackPbarGray" type="Sprite" parent="Gray"]
texture = ExtResource( 3 )

[node name="GodotGray" type="Sprite" parent="Gray"]
texture = ExtResource( 8 )

[node name="LogoGray" type="Sprite" parent="Gray"]
texture = ExtResource( 9 )

[node name="LineBar1" type="Sprite" parent="."]
visible = false
script = ExtResource( 10 )
offsets = Vector2( 26, 308 )

[node name="LineBar2" type="Sprite" parent="."]
visible = false
script = ExtResource( 10 )
offsets = Vector2( 26, 373 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 1.2, 1.2 )
